@@ -3,7 +3,7 @@ libdisasm_a_SOURCES = disasm.h \
 	disasm.c \
 	machine.dat
 
-AM_CFLAGS = -Wall -Werror -fno-strict-aliasing
+AM_CFLAGS = -Wall -fno-strict-aliasing
 
 INCLUDES = -I$(top_srcdir)/src/libstruct \
 	-I$(top_srcdir)/src/libmhandle
