@@ -1,4 +1,4 @@
 lib_LIBRARIES = libmhandle.a
 libmhandle_a_SOURCES = mhandle.c mhandle.h
-AM_CFLAGS = -Wall -Werror
+AM_CFLAGS = -Wall
 
