@@ -1,4 +1,4 @@
 lib_LIBRARIES = libmisc.a
 libmisc_a_SOURCES = misc.c misc.h
-AM_CFLAGS = -Wall -Werror
+AM_CFLAGS = -Wall
 
